# ratty

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  init-linux.lua  kitty-linux.conf  ratty  todo-ratty.md
ratty_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
ratty_autogen/3YJK5W5UP7/: qrc_shaders.cpp
ratty_autogen/YPKJ5OE7LN/: moc_main_window.cpp  moc_split_container.cpp  moc_terminal_tab.cpp  moc_terminal_widget.cpp
resources/: shaders.qrc
resources/shaders/: rect.frag  rect.vert  text.frag  text.vert
src/: main.c  main.cpp  pty-test  pty_test  todo-ratty.md
src/config/: config.c  config.cpp  config.h  default_config.yaml
src/core/: pty.c  pty.cpp  pty.h
src/render/: font.c  font.h  font_manager.cpp  font_manager.h  gl_backend.c  gl_backend.h  gl_renderer.cpp  gl_renderer.h  glyph_atlas.cpp  glyph_atlas.h  glyph_cache.c  glyph_cache.h  render.c  render.h  render_types.h  text_shaper.c  text_shaper.h  texture_atlas.c  texture_atlas.h
src/render/shaders/: rect.vert  text.frag  text.vert
src/ui/: example_integration.c  input_handler.cpp  input_handler.h  keybindings.c  keybindings.h  main_window.cpp  main_window.h  split.c  split.h  split_container.cpp  split_container.h  tab.c  tab.h  terminal_tab.cpp  terminal_tab.h  terminal_widget.cpp  terminal_widget.h  types.h  window.c  window.h
src/utils/: retcodes.h
